--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-<script src="common.js"></script>
-<script src="bundle.js"></script>
+<script src="./dist/vendor.bundle.js"></script>
+<script src="./dist/mainPage.js"></script>
 </body>
 </html>
