--- a/src/libs/TestHtml.html
+++ b/src/libs/TestHtml.html
@@ -1,13 +1,16 @@
-<!-- index.html -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="dist/bootstrap.css" />
-    <link rel="stylesheet" href="dist/mainPage.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
+
+    <script src="jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
+    <title>Title</title>
 </head>
 <body>
-<button id="btn_test_modal" class="btn btn-primary">测试下模态框</button>
- <!--模态框（Modal） -->
+
+<!--模态框（Modal） -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -34,9 +37,11 @@
 </div>
 
 
-<script src="./dist/bundle.valis.js"></script>
-<script src="./dist/bundle.mainPage.js"></script>
 
 
+<script>
+    alert(window.$);
+    $("#myModal").modal('show');
+</script>
 </body>
 </html>
