--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
 <button id="btn_test_modal" class="btn btn-primary">测试下模态框</button>
 <input class="Wdate" type="text" onClick="WdatePicker()"> <font color=red>&lt;- 点我弹出日期控件</font>
+
+<ul id="tree" class="ztree">
+
+</ul>
+
  <!--模态框（Modal） -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
