--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="dist/bootstrap.css" />
-    <link rel="stylesheet" href="dist/mainPage.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/pageIndex/mainPage.css" />
 </head>
 <body>
 <button id="btn_test_modal" class="btn btn-primary">测试下模态框</button>
-<input class="Wdate" type="text" onClick="WdatePicker()"> <font color=red>&lt;- 点我弹出日期控件</font>
 
 <ul id="tree" class="ztree">
 
@@ -40,8 +39,8 @@
 </div>
 
 
-<script src="./dist/bundle.valis.js"></script>
-<script src="./dist/bundle.mainPage.js"></script>
+<script src="js/bundle.valis.js"></script>
+<script src="js/pageIndex/mainPage.js"></script>
 
 
 </body>
