国庆之前提交

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/pageIndex/mainPage.css" />
+    <!--<link rel="stylesheet" href="css/bootstrap.css" />-->
+    <!--<link rel="stylesheet" href="css/pageIndex/mainPage.css" />-->
 </head>
 <body>
 <button id="btn_test_modal" class="btn btn-primary">测试下模态框</button>
@@ -39,8 +39,8 @@
 </div>
 
 
-<script src="js/bundle.valis.js"></script>
-<script src="js/pageIndex/mainPage.js"></script>
+<!--<script src="js/bundle.valis.js"></script>-->
+<!--<script src="js/pageIndex/mainPage.js"></script>-->
 
 
 </body>
