添加webpack.production.config.js

--- a/debug/index.html
+++ b/debug/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <!--<link rel="stylesheet" href="/css/bootstrap.css" />-->
     <!--<link rel="stylesheet" href="css/pageIndex/mainPage.css" />-->
-<link href="/css/pageIndex/mainPage.803b6af7aed6099cf59c.css" rel="stylesheet"></head>
+<link rel="shortcut icon" href="/logo.ico"><link href="/css/pageIndex/mainPage.css" rel="stylesheet"></head>
 <body>
 <button id="btn_test_modal" class="btn btn-primary">测试下模态框</button>
 <p>
-    hello test22
+    hello test2233
 </p>
 <ul id="tree" class="ztree">
 
@@ -45,5 +45,5 @@
 <!--<script src="js/pageIndex/mainPage.js"></script>-->
 
 
-<script type="text/javascript" src="/js/libs.68a02a1cc6bfef455b2d.js"></script><script type="text/javascript" src="/js/pageIndex/mainPage.68a02a1cc6bfef455b2d.js"></script></body>
+<script type="text/javascript" src="/js/libs.js"></script><script type="text/javascript" src="/js/pageIndex/mainPage.js"></script></body>
 </html>
