--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <!--<link rel="stylesheet" href="/css/bootstrap.css" />-->
     <!--<link rel="stylesheet" href="css/pageIndex/mainPage.css" />-->
 </head>
 <body>
