--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -2,42 +2,59 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <!--<link rel="stylesheet" href="/css/bootstrap.css" />-->
     <!--<link rel="stylesheet" href="css/pageIndex/mainPage.css" />-->
 </head>
 <body>
-<button id="btn_test_modal" class="btn btn-primary">测试下模态框</button>
-<p>
-    hello test2233
-</p>
-<ul id="tree" class="ztree">
+<div class="col-md-2 col-sm-2  col-xs-2 left-tree-wrapper">
+    <div class="siderbar">
+        <h3>类型树</h3>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="请输入查询内容" id="input_tree_search">
+             			 	 <span class="input-group-btn">
+                  				<button class="btn btn-default" type="button" style="width: 43px;height: 34px"
+                                        id="btn_tree_search"><div></div></button>
+                             </span>
+        </div>
+        <ul id="tree" class="ztree">
+        </ul>
+    </div>
+</div>
+<div class="col-md-10 col-sm-10  col-xs-10 right-content-wrapper">
 
-</ul>
+    <form class="form-inline round-back-color advance-search-area margin-top-20" action="javascript:;">
+        <div class="input-group">
+            <input type="text" class="form-control pull-left" style="width:244px;" id="namekey"
+                   placeholder="名称查询">
+            <button id="search" type="button" class="btn btn-primary pull-left btn-orange">搜索
+            </button>
+            <button type="button" class="btn btn-primary pull-right btn-blue"
+                    style="margin-left: 20px;" data-toggle="modal"
+                    data-target="#advanceSearchProductModal">高级搜索
+            </button>
+        </div>
+    </form>
 
- <!--模态框（Modal） -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                    &times;
-                </button>
-                <h4 class="modal-title" id="myModalLabel">
-                    模态框（Modal）标题
-                </h4>
-            </div>
-            <div class="modal-body">
-                在这里添加一些文本
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                </button>
-                <button type="button" class="btn btn-primary">
-                    提交更改
-                </button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
+    <div class="margin-top-20 margin-bottom-20 table_outer_div_wrapper">
+        <table class="table table-bordered table-layout-fix borderless">
+            <thead>
+            <tr>
+                <th width="60px">序号</th>
+                <th width="60px">名称</th>
+                <th width="100px">类型</th>
+                <th width="60px">规格</th>
+                <th width="60px">型号</th>
+                <th width="70px">到货地</th>
+                <th width="180px">日期</th>
+                <th width="60px">单位</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <script id="table_template" type="text/html">
+
+        </script>
+    </div>
 </div>
 
 
