添加些HTML内容

--- a/debug/index.html
+++ b/debug/index.html
@@ -16,7 +16,7 @@
     <script src="/js/polyfill/respond.min.js"></script>
     <![endif]-->
 
-</head>
+<link rel="shortcut icon" href="/logo.ico"><link href="/css/pageIndex/mainPage.css" rel="stylesheet"></head>
 <body>
 
 <!-- header -->
@@ -149,5 +149,5 @@
 <!--<script src="js/pageIndex/mainPage.js"></script>-->
 
 
-</body>
+<script type="text/javascript" src="/js/libs.js"></script><script type="text/javascript" src="/js/pageIndex/mainPage.js"></script></body>
 </html>
