提交小修改

--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>personal online resume</title>
+    <title>Online_Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -122,7 +122,7 @@
         <div class="text-center">
             <p>重视基础，拥抱变化。</p>
             <p>快速学习能力，强烈自我驱动力。</p>
-            <p>思维严谨，随和幽默,良好的团队合作精神</p>
+            <p>思维严谨，随和幽默，良好的团队合作精神</p>
         </div>
     </section>
 
@@ -147,11 +147,11 @@
     <ul>
         <li data-id="basic"><a><span>基本信息</span></a></li>
         <li data-id="education"><a><span>教育背景</span></a></li>
-        <li data-id="experience"><a href="#experience"><span>工作经历</span></a></li>
+        <li data-id="experience"><a><span>工作经历</span></a></li>
         <li data-id="abilities"><a><span>专业技能</span></a></li>
         <li data-id="evaluation"><a><span>自我评价</span></a></li>
     </ul>
-    <a href="#0" class="cd-close-menu">Close<span></span></a>
+    <a class="cd-close-menu">Close<span></span></a>
 </nav>
 
 </body>
