--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Online_Resume</title>
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online_Resume</title>
 </head>
 <body>
 
@@ -67,19 +68,19 @@
                     <p class="experience-time">2016.05-2016.12</p>
                     <p>开发建筑业建造材料，采购商询价，供应商报价系统。</p>
                     <ul>
-                        <li class="txt-indent-20">1)	开发管理系统“鲁班通”。在原有pc端客户端的基础上，迭代移植到web端上。</li>
-                        <li class="txt-indent-20">2)  负责模块：zTree显示树状材料类型，</li>
+                        <li class="txt-indent-20">1)	工作内容主要负责移植一个PC端MFC软件“鲁班通”的功能到web端，技术选型jQuery，Webpack，树形插件zTree，图表库eCharts等，负责模块包括项目管理，供应商管理，材料信息编辑，材料价格波动展示等。</li>
+                        <li class="txt-indent-20">2)    使用React，ES6，Webpack快速构建鲁班数据部门新版官网页面。</li>
                     </ul>
                 </div>
 
                 <div>
                     <strong>广州御和科技有限公司</strong>
-                    <p class="experience-time">2014.07-2016.01</p>
+                    <p class="experience-time">2014.07-2016.02</p>
                     <p>开发游戏后台数据运营系统。</p>
                     <ul>
                         <li class="txt-indent-20">1)	开发游戏运营发送消息的页面，供运营人员发布公告，实时广播到游戏客户端，游戏出bug，发送补偿给玩家。</li>
-                        <li class="txt-indent-20">2)	开发玩家数据管理页面，玩家查询，GM操作，禁言封号，发送邮件</li>
-                        <li class="txt-indent-20">3)	开发实时数据展示页面，使用ECharts图表库，用于展示游戏开新服后用户实时注册数，实时在线率，统计用户次日留存率</li>
+                        <li class="txt-indent-20">2)	开发玩家数据管理页面，玩家查询，GM操作，禁言封号，发送邮件。</li>
+                        <li class="txt-indent-20">3)	开发实时数据展示页面，使用Highcharts图表库，用于展示游戏开新服后用户实时注册数，实时在线率，统计用户次日留存率。</li>
                     </ul>
                 </div>
             </div>
@@ -87,7 +88,6 @@
 
         </div>
     </section>
-
 
     <section class="section" id="abilities">
         <div class="section-title-wrapper">
@@ -101,13 +101,13 @@
                 <ul class="ul-skill">
                     <li>熟练掌握原生JavaScript，HTML和CSS</li>
                     <li>熟悉ES6</span></li>
-                    <li class="skill-desc">扎实的计算机基础</li>
+                    <li>扎实的计算机基础</li>
                 </ul>
                 <h2>工具框架库</h2>
                 <ul class="ul-skill">
-                    <li>熟练使用jquery</li>
-                    <li>熟练掌握react技术栈，Redux，React-Router，SCSS，CSS Module...</li>
-                    <li>深入理解前端工程化，熟练配置webpack，熟悉前端性能优化</li>
+                    <li>熟练使用jQuery</li>
+                    <li>熟悉React技术栈，Redux，React Router，SCSS</li>
+                    <li>深入理解前端工程化，熟练配置Webpack，熟悉前端性能优化</li>
                 </ul>
             </div>
         </div>
@@ -120,8 +120,8 @@
         </div>
         <hr/>
         <div class="text-center">
-            <p>重视基础，拥抱变化。</p>
-            <p>快速学习能力，强烈自我驱动力。</p>
+            <p>重视基础，拥抱变化</p>
+            <p>快速学习能力，强烈自我驱动力</p>
             <p>思维严谨，随和幽默，良好的团队合作精神</p>
         </div>
     </section>
