www.baihuzish.com

--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -10,6 +10,94 @@
     <title></title>
 </head>
 <body>
+<header>
+    <section class="header-wrapper">
+        <section class="logo">
+            <section class="logo-icon"></section>
+            <section>
+                <p class="logo-title">白胡子网络</p>
+                <a class="logo-link">baihuzish.com</a>
+            </section>
+
+        </section>
+        <section class="banner-text">
+            <p class="banner-title">
+                极速审核评估
+            </p>
+            <p class="banner-desc">
+                极速审核评估<br/>额度最高可达10万，最快1小时放款<br/>依托权威平台，低风险，高质量
+            </p>
+        </section>
+
+    </section>
+
+</header>
+
+<section id="aboutUs">
+    <section class="title">
+        关于我们
+        <hr/>
+    </section>
+
+    <ul class="table">
+        <li class="table-cell">
+            <div class="about-cell-img img-borrow"></div>
+            <em class="block">随时可借</em>
+            <p class="about-desc">随时可以借款，帮助用户解决燃眉之急</p>
+        </li>
+        <li class="about-cell">
+            <div class="about-cell-img img-request"></div>
+            <em class="block">申请便利</em>
+            <p class="about-desc">简单认证，即可获得借款资格，金额及时到位</p>
+        </li>
+        <li class="table-cell">
+            <div class="about-cell-img img-quota"></div>
+            <em class="block">额度灵活</em>
+            <p class="about-desc">100-100000元任意额度，随意借</p>
+        </li>
+        <li class="table-cell">
+            <div class="about-cell-img img-people"></div>
+            <em class="block">多种人群</em>
+            <p class="about-desc">支持学生，支持工薪族，支持企业主</p>
+        </li>
+
+    </ul>
+
+</section>
+
+<section id="contactUs">
+    <section class="title">
+        联系我们
+        <hr/>
+    </section>
+    <ul class="table">
+        <li class="table-cell">
+            <div class="contact-cell-img img-phone"></div>
+            <em class="block">手机</em>
+            <p class="contact-desc">13378133838</p>
+        </li>
+        <li class="table-cell">
+            <div class="contact-cell-img img-mail"></div>
+            <em class="block">邮箱</em>
+            <p class="contact-desc">mabing@baihuzish.com</p>
+        </li>
+        <li class="table-cell">
+            <div class="contact-cell-img img-register-location"></div>
+            <em class="block">注册地址</em>
+            <p class="contact-desc">Room 303r,No.98 Guokang Road,<br/>Yangpu District Shanghai,Shanghai 200092 CN</p>
+        </li>
+
+    </ul>
+</section>
+
+<footer>
+    <p>
+        白胡子信息科技（上海）有限公司
+    </p>
+    <p>
+        Copyright@2015-2025 <a href="http://wwww.baihuzish.com">http://wwww.baihuzish.com</a> All Rights Reserved
+    </p>
+</footer>
 
 
 </body>
