--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -20,16 +20,10 @@
 </header>
 
 <div class="global_bg">
-    <section class="flex flex-direction-column flex-align-center">
+    <section class="flex flex-direction-column flex-align-center padding-top-md">
         <h2>快速提升排名</h2>
         <hr/>
-        <ul class="flex flex-direction-row margin-top-md" id="fast-desc">
-            <li>流量不精准？</li>
-            <li>见效时间慢？</li>
-            <li>推广成本高？</li>
-            <li>用户转化差？</li>
-            <li>APP下载少？</li>
-        </ul>
+       <img src="/banner_text.png" class="banner_text margin-top-md">
         <img src="/phone3.png" class="phone3 margin-top-xd">
     </section>
 
@@ -44,7 +38,7 @@
     <section id="gift" class="flex flex-direction-column flex-align-center" style="margin-top: 4rem">
         <h2>领取礼包</h2>
         <hr/>
-        <div class="margin-top-md center-box padding-md">
+        <div class="margin-top-md center-box padding-md gift-box">
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label for="contact" class="col-sm-2 control-label">联系人<span>*</span></label>
@@ -54,10 +48,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="appName" class="col-sm-2 control-label">APP名<span>*</span></label>
+                    <label for="appName" class="col-sm-2 control-label">APP名称<span>*</span></label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="appName" name="appName"
-                               placeholder="APP名" maxlength="40" required>
+                               placeholder="APP名称" maxlength="40" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -76,19 +70,21 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-5 col-sm-2">
-                        <button type="submit" class="btn btn-primary">提交</button>
+                        <button type="submit" class="btn btn-danger">提交</button>
                     </div>
                 </div>
             </form>
 
-            <div class="margin-top-md">
+            <div class="margin-top-md gift-desc">
                 <h3>备注</h3>
                 <ul>
                     <li>1、ASO基础优化礼包：ASO100字符优化服务1次。</li>
                     <li>2、新客户可在下列价值6666元人民币的礼包中任选一：</li>
-                    <li>①下载量：真实用户下载量300。</li>
-                    <li>②热搜词：热度5000以内的关键词，优化至关键词排名前三1次。</li>
-                    <li>③ASM：苹果应用商店竞价广告免费代理投放30天。</li>
+                    <li style="padding-left: 1.4rem">
+                    ①下载量：真实用户下载量300。<br>
+                    ②热搜词：热度5000以内的关键词，优化至关键词排名前三1次。<br>
+                    ③ASM：苹果应用商店竞价广告免费代理投放30天。
+                    </li>
                 </ul>
             </div>
 
