--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-    <a class="fixed-logo" href="http://www.cqaso.com" target="_blank"><img src="<%= require('./assets/logo.png') %>"></a>
+    <a id="logo_href" class="fixed-logo" href="http://www.cqaso.com/" target="_blank"><img src="<%= require('./assets/logo.png') %>"></a>
     <img src="<%= require('./assets/banner_bg.jpg') %>" class="banner_bg">
     <img src="<%= require('./assets/banner_btn.png') %>" class="banner_btn">
 </header>
