--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -1,12 +1,35 @@
-<!-- index.html -->
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="pragma" content="no-cache" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online_Resume</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="区块链大数据资讯平台">
+    <meta name="keywords" content="CQcoin,比特币,BTC,区块链">
+    <title>CQcoin-区块链大数据资讯平台</title>
 </head>
 <body>
+<header>
+    <a href="/" style="display:flex;align-items: center">
+        <div class="logo"></div>
+        <label class="title">CQcoin</label>
+    </a>
+</header>
+
+<main class="main">
+    <label class="main-title">专业的区块链大数据资讯平台App</label>
+    <a class="download-btn ios-down" href="/">iPhone 版 v1.0.0 下载</a>
+    <a class="download-btn and-down" href="/">Android 版 v1.0.0 下载</a>
+    <p class="download-link">微信内无法下载？请复制 cqcoin.info 到浏览器打开</p>
+</main>
+
+<footer>
+    <label>
+        Copyright©2013-2018闯奇信息科技（上海）有限公司 沪ICP备15011042号-2
+    </label>
+</footer>
 
 </body>
 </html>
