http://www.miitbeian.gov.cn/

--- a/src/index_origin.html
+++ b/src/index_origin.html
@@ -108,7 +108,7 @@
         </div>
     </section>
     <footer>
-        Copyright©2013-2017闯奇信息科技（上海）有限公司 沪ICP备15011042号-2
+        Copyright©2013-2017闯奇信息科技（上海）有限公司 <a href="http://www.miitbeian.gov.cn/" target="_blank">沪ICP备15011042号-2</a>
     </footer>
 </div>
 <script>
